<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_weather"
    tools:context=".Activities.WeatherActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">




        <TextView
            android:id="@+id/cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/days_one"
            android:gravity="center_horizontal"
            android:text="@string/city_name"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lastUpdated"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cityName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:gravity="center_horizontal"
            android:text="@string/last_update_example"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/weatherIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastUpdated"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="56dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="90sp" />

        <TextView
            android:id="@+id/currentTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailsField"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="106dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="94dp"
            android:gravity="center"
            android:text="@string/temperature_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/detailsField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weatherIcon"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/days_one"
            android:gravity="center"
            android:text="@string/fog_hum_pre_text"
            android:textColor="#FFF"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/foodImageView"
            android:layout_width="82dp"
            android:layout_height="69dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="290dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/restaurant_button"
            app:srcCompat="@drawable/restauranticondef" />

        <TextView
            android:id="@+id/constantText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cityName"
            android:layout_marginStart="73dp"
            android:layout_marginTop="473dp"
            android:fontFamily="@font/days_one"
            android:gravity="center"
            android:text="Check restaurants in"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/checkRestaurants"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/constantText"
            android:layout_marginStart="73dp"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/days_one"
            android:gravity="center"
            android:text="Sofia, Bg"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold" />


    </RelativeLayout>

</RelativeLayout>